syntax = "proto3";

package grpc;

option go_package = "github.com/hasansino/goapp/internal/example/provider/grpc";

message Fruit {
  int32 id = 1;
  string name = 2;
}

message ListFruitsRequest {
  int32 limit = 1;
  int32 offset = 2;
}

message ListFruitsResponse {
  repeated Fruit fruits = 1;
}

message GetFruitRequest {
  int32 id = 1;
}

message CreateFruitRequest {
  string name = 1;
}

message CreateFruitResponse {
  Fruit fruit = 1;
}

message UpdateFruitRequest {
  int32 id = 1;
  string name = 2;
}

message UpdateFruitResponse {
  Fruit fruit = 1;
}

message DeleteFruitRequest {
  int32 id = 1;
}

message DeleteFruitResponse {
  bool success = 1;
}

service ExampleService {
  rpc ListFruits(ListFruitsRequest) returns (ListFruitsResponse);
  rpc GetFruit(GetFruitRequest) returns (Fruit);
  rpc CreateFruit(CreateFruitRequest) returns (CreateFruitResponse);
  rpc UpdateFruit(UpdateFruitRequest) returns (UpdateFruitResponse);
  rpc DeleteFruit(DeleteFruitRequest) returns (DeleteFruitResponse);
}